--- a/_sass/minima/_navbar.scss
+++ b/_sass/minima/_navbar.scss
@@ -41,7 +41,7 @@ $mobile-nav-pad: 8px 5px;
         float: right;
         padding: $mobile-nav-pad;
         margin: 0px;
-        color: #999;
+        color: #757575;
         line-height: 1;
     }
 
@@ -50,7 +50,7 @@ $mobile-nav-pad: 8px 5px;
     }
 
     li:hover>a {
-        color: #999;
+        color: #757575;
     
     }
 
